# bard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 42e8c2b5bd35_create_user_table.py  9d8633ce5d41_add_onboarding_responses_table.py  d573044e2507_add_faces_and_images_tables.py
app/: celery_app.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  images.py  journey.py  onboarding.py  users.py
app/api/v1/endpoints/openai/: enums.py  factory.py  provider.py  strategies.py
app/api/v1/faces/: helper.py  tasks.py
app/core/: config.py  errors.py  generator_base.py  ingestImages.py  prompts.yaml  security.py  supabse_client.py
app/db/: session.py
app/models/: faces.py  journey.py  onboarding_responses.py  user.py
app/schemas/: faces.py  journey.py  onboarding.py  response.py  token.py  user.py
app/tests/: test_image_task.py
